tests/it/snapshots/it__artefact__pull_artefact_local_stdout.snap
---
source: tests/it/artefact.rs
expression: redact_shas(&out2.stdout)
---
Pulling latest changes...
  ok    meta/app (artefact [sha])
