tests/it/snapshots/it__artefact__pull_artefact_replace_stdout.snap
---
source: tests/it/artefact.rs
assertion_line: 214
expression: redact_shas(&out.stdout)
---
Pulling latest changes...
  ok    meta/app (artefact [sha])
