tests/it/snapshots/it__artefact__sync_artefact_local_stdout.snap
---
source: tests/it/artefact.rs
assertion_line: 187
expression: out2.stdout
---
Pulling latest changes...
  ok    meta/app (artefact v1.1.0)
