tests/it/snapshots/it__artefact__sync_artefact_replace_stdout.snap
---
source: tests/it/artefact.rs
assertion_line: 164
expression: out.stdout
---
Pulling latest changes...
  ok    meta/app (artefact v1.0.0)
