tests/it/snapshots/it__artefact__sync_artefact_up_to_date_stdout.snap
---
source: tests/it/artefact.rs
assertion_line: 1608
expression: out.stdout
---
Pulling latest changes...
  ok    meta/app (artefact v1.0.0, up to date)
